# Studying

./: .gitignore  README.md
!Back-end Projects/Tai/: composer.json  package-lock.json
Algorytmy Analizy Numerycznej w C++/: Lab2.cpp  Untitled1.cpp  Untitled2.cpp
Algorytmy Analizy Numerycznej w C++/lab1/: Untitled1.cpp
Aplikacje Internetowe w PHP/Lab 3/: ankieta.php  ankieta.txt  funkcje.php  pliki.php  zdjecia.html  zdjecia.php
Aplikacje Internetowe w PHP/Lab 5/: index.php  users.json
Aplikacje Internetowe w PHP/Lab 6/: Baza.php  BazaPDO.php  index.php
Aplikacje Internetowe w PHP/Lab 7/: test1.php  test2.php
Aplikacje Internetowe w PHP/Lab 8/: index.php  processLogin.php  testLogin.php
Aplikacje Internetowe w PHP/lab 1/: galeria.php  index.php  typy.php
Aplikacje Internetowe w PHP/lab 2/: formularz.html  (+9 more)
Tworzenie aplikacji w HLA/: Nowy dokument tekstowy.txt  movSubAdd.hla  movSubAddextended.hla  neg.hla.txt  pierwszy.hla  zmienne.hla  zmienneExtended.hla  znak.hla
Tworzenie baz dannych w tchnologii SQL/: KOLOS2_Volodymyr_Dobrohorskyi.txt  ProjectBilet.dmd  bazafilmow.sql  kolos.sql
Tworzenie podstawowych aplikacji w С++/: Main.pro  Main.pro.user.c02be51  generatorlosowy.h  main.cpp  mieszkaniec.cpp  mieszkaniec.h  nisza.cpp  nisza.h  organizm.cpp  organizm.h  osobniki.cpp  osobniki.h  sasiedztwo.cpp  sasiedztwo.h  ustawienia.cpp  ustawienia.h  zlab02.cpp  zlab02.h  zlab03.cpp  zlab03.h  zlab06.cpp  zlab06.h  zlab09.cpp  zlab09.h
Zaawansowane progrmowanie obiektowe, C++/untitled/: CMakeLists.txt  Contact.h  Contacts.h  Mix.h  TempF.h  main.cpp
(+673 files in other folders)
